# Capstone-Workspace

./: README.md
SPARKMAX Motor Controller/: README.md  heartbeat.c  send_can.c  set_duty_cycle.c
Testing/SPARKMAX Motor Controller/: README.md  heartbeat.c
Testing/c++/SparkMaxDriver/: CMakeLists.txt
Testing/c++/SparkMaxDriver2/: CMakeLists.txt
Testing/c++/SparkMaxDriver2/include/: CANSparkMax.hpp
Testing/c++/arcadedrive/: CMakeLists.txt
Testing/c++/sparkmax/src/: sparkmax.cpp
Videos/: Autonomous_Failure.mov
c++/SparkMaxDriver/src/: main.cpp
c++/SparkMaxDriver2/src/: CANSparkMax.cpp  main.cpp
c++/arcadedrive/src/: arcadedrive.cpp
c++/sparkmax/: CMakeLists.txt
c/socketcan/: pdp_reader.c  test.c
